fix: fix horizontal link alignment in styles of VerticalForm component

--- a/src/components/VerticalForm/vertical-form.module.css
+++ b/src/components/VerticalForm/vertical-form.module.css
@@ -31,7 +31,7 @@
 .links-pair {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  justify-content: center;
 }
 
 .link {
